test/cases/errors/harmony-import-missing/module.js
export * from "./missing";
export * from "./a";
